# rs-llmspell

./: .gitignore  .markdown-link-check.json  1  CHANGELOG.md  CHANGELOG_v0.3.0.md  CLAUDE.md  CLIPPY_CHANGES.md  CONFIG-FLATTEN-ANALYSIS.md  CONFIG_CLEANUP_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_UX_ANALYSIS.md  FUTURE-TODO.md  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  PARAMETER_CONSISTENCY_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE-12.5-ARCHITECTURE-ANALYSIS.md  PHASE-13C3-CLEAN-REFACTOR-PLAN.md  PHASE-13C3-STORAGE-ARCHITECTURE-ANALYSIS.md  PHASE-13C3-VERIFICATION-REPORT.md  PHASE08-TODO.md  PHASE_13B3_ANALYSIS.md  RAG-HNSW-LUA-ARCHITECTURE.md  README-DEVEL.md  README.md  REFACTORING_STATUS.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.11.0.md  RELEASE_NOTES_v0.11.1.md  RELEASE_NOTES_v0.11.2.md  RELEASE_NOTES_v0.12.0.md  RELEASE_NOTES_v0.13.0.md  RELEASE_NOTES_v0.13.1.md  RELEASE_NOTES_v0.14.0.md  RELEASE_NOTES_v0.14.1.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  (+137 more)
llmspell-agents/: Cargo.toml  README.md
llmspell-agents/examples/: GUIDE.md  README.md  agent_library.rs  auto_save_agent.rs  builder_patterns.rs  code_gen_agent.rs  composition_patterns.rs  context_usage.rs  data_pipeline_agent.rs  decision_agent.rs  factory_example.rs  monitoring_agent.rs  monitoring_setup.rs  multi_agent_coordinator.rs  provider_state_persistence.rs  research_agent.rs  stateful_agent.rs  template_usage.rs  tool_orchestrator.rs
llmspell-agents/src/: agent_wrapped_tool.rs  builder.rs  config.rs  di.rs  factory.rs  factory_registry.rs  health.rs  lib.rs  tool_context.rs  tool_discovery.rs  tool_errors.rs  tool_invocation.rs  tool_manager.rs
llmspell-agents/tests/: README.md  communication_tests.rs  integration_tests.rs  lifecycle_persistence_tests.rs  lifecycle_tests.rs  multi_agent_state.rs  registry_basic.rs  scenario_tests.rs  state_persistence_integration.rs  tool_integration_performance_tests.rs
llmspell-bridge/: CHANGELOG_API_CONSOLIDATION.md  Cargo.toml  README.md
llmspell-bridge/benches/: context_assembly.rs  rag_bench.rs  session_bench.rs  workflow_bridge_bench.rs
llmspell-bridge/docs/: GLOBAL_INJECTION_DESIGN.md  WORKFLOW_BRIDGE_GUIDE.md  WORKFLOW_INTEGRATION.md  adaptive-performance.md  dependency-injection.md
llmspell-bridge/examples/: multi_agent_consensus.lua  multi_agent_parallel.lua  multi_agent_pipeline.lua  provider_example.lua  workflow_conditional.lua  workflow_loop.lua  workflow_parallel.lua  workflow_sequential.lua
llmspell-bridge/src/: agent_bridge.rs  agent_conversion.rs  agents.rs  artifact_bridge.rs  circuit_breaker.rs  component_factory.rs  condition_evaluator.rs  config_bridge.rs  context_bridge.rs  conversion.rs  debug_bridge.rs  debug_coordinator.rs  debug_runtime.rs  debug_state_cache.rs  diagnostics_bridge.rs  discovery.rs  event_bridge.rs  event_bus_adapter.rs  event_serialization.rs  execution_bridge.rs  execution_context.rs  hook_bridge.rs  hook_profiler.rs  infrastructure.rs  lib.rs  memory_bridge.rs  memory_provider.rs  monitoring.rs  multi_agent.rs  null_circuit_breaker.rs  null_hook_profiler.rs  null_profiler.rs  null_session_recorder.rs  orchestration.rs  profiler.rs  profiling_config.rs  providers.rs  providers_discovery.rs  rag_bridge.rs  registry.rs  (+18 more)
llmspell-bridge/tests/: agent_bridge_test.rs  artifact_global_test.rs  async_context_preservation_test.rs  async_tool_execution_test.rs  bridge_abstraction_test.rs  bridge_provider_test.rs  component_registry_test.rs  comprehensive_validation_test.rs  conditional_breakpoints_test.rs  conditional_external_tests.rs  content_routing_integration_test.rs  context_global_test.rs  debug_breakpoint_pause_integration_test.rs  debug_hooks_test.rs  debug_integration_end_to_end_test.rs  debug_integration_test.rs  debug_integration_tests.rs  debug_output_regression_test.rs  debug_performance_verification_test.rs  distributed_tracing_test.rs  e2e_phase13_integration_test.rs  event_integration_test.rs  external_api_tests.rs  globals_test.rs  hook_coexistence_test.rs  hook_multiplexer_test.rs  hook_separation_test.rs  hot_reload_test.rs  hybrid_architecture_integration_test.rs  integration_test.rs  json_performance_test.rs  local_llm_registration_test.rs  lua_api_validation_test.rs  lua_completion_tests.rs  lua_coroutine_test.rs  lua_engine_test.rs  lua_event_enhanced.rs  lua_hook_enhanced.rs  lua_integration_tests.rs  lua_workflow_api_tests.rs  (+35 more)
llmspell-cli/: Cargo.toml  README.md  build.rs
llmspell-cli/resources/: README.md
llmspell-cli/src/: app_discovery.rs  cli.rs  config.rs  embedded_resources.rs  execution_context.rs  kernel_connection.rs  kernel_discovery.rs  lib.rs  main.rs  output.rs  repl_interface.rs  test_helpers.rs  tool_source.rs
llmspell-cli/tests/: app_discovery_tests.rs  cli_integration_test.rs  compatibility_layer_tests.rs  config_test.rs  kernel_discovery_tests.rs  streaming_test.rs  tool_integration_test.rs  trace_levels_test.rs
llmspell-config/: Cargo.toml  README.md
llmspell-context/: Cargo.toml
llmspell-core/: Cargo.toml  README.md
llmspell-debug/: Cargo.toml
llmspell-engine/: Cargo.toml
llmspell-events/: Cargo.toml
llmspell-graph/: Cargo.toml  README.md
llmspell-hooks/: Cargo.toml  README.md
llmspell-kernel/: Cargo.toml  README.md
llmspell-memory/: Cargo.toml  MIGRATION_GUIDE.md  README.md
llmspell-providers/: Cargo.toml  README.md
llmspell-rag/: Cargo.toml  README.md
llmspell-repl/: Cargo.toml
llmspell-security/: Cargo.toml  README.md
llmspell-sessions/: Cargo.toml  README.md
llmspell-state-persistence/: Cargo.toml  README.md
llmspell-state-traits/: Cargo.toml
llmspell-storage/: Cargo.toml  README.md
llmspell-templates/: Cargo.toml
llmspell-tenancy/: Cargo.toml  README.md
llmspell-testing/: Cargo.toml  README.md
llmspell-tools/: Cargo.toml  HOOK_INTEGRATION_SUMMARY.md  PERFORMANCE_REPORT.md  README.md
llmspell-utils/: Cargo.toml  README.md
llmspell-web/: Cargo.toml  README.md  build.rs
llmspell-workflows/: Cargo.toml  README.md  benchmark_results.txt
vectorlite-rs/: Cargo.toml
(+6806 files in other folders)
