[workspace]
resolver = "2"

members = [
    "llmspell-cli",
    "llmspell-core",
    "llmspell-agents",
    "llmspell-tools",
    "llmspell-workflows",
    "llmspell-bridge",
    "llmspell-providers",
    "llmspell-storage",
    "llmspell-config",
    "llmspell-security",
    "llmspell-hooks",
    "llmspell-events",
    "llmspell-testing",
    "llmspell-utils",
    "llmspell-rag",
    "llmspell-tenancy",
    "llmspell-kernel",
    "examples/rust-developers/extension-pattern-example",
    "examples/rust-developers/builder-pattern-example",
    "examples/rust-developers/custom-tool-example",
    "examples/rust-developers/custom-agent-example",
    "examples/rust-developers/async-patterns-example",
    "examples/rust-developers/integration-test-example"
]

[workspace.package]
version = "0.11.2"
edition = "2021"
authors = ["Lex Lapax<lexlapax@gmail.com>"]
repository = "https://github.com/lexlapax/rs-llmspell"
license = "Apache-2.0"
keywords = ["llm", "ai", "agents", "scripting", "automation"]
categories = ["text-processing", "api-bindings", "automation"]

# Test categorization managed through features in llmspell-testing crate

[workspace.lints.rust]
unsafe_code = "warn"
unused_must_use = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# UUID and time handling
uuid = { version = "1.17", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt", "time"] }
tracing-futures = "0.2"

# Configuration management
config = "0.15"

# Lazy static and once cell
once_cell = "1.19"

# Testing framework
mockall = "0.13"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
serial_test = "3.1"
tracing-test = "0.2"

# Storage backends
sled = "0.34"
rocksdb = "0.22"

# Scripting engines
mlua = { version = "0.9", features = ["lua54", "async", "serialize", "send", "parking_lot"] }
boa_engine = "0.20"
quickjs_runtime = "0.12"

# LLM providers and AI
rig-core = "0.21"
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.3"
tokenizers = "0.20"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "stream"] }

# JSON schema validation
jsonschema = "0.18"

# Cross-platform filesystem operations
path-clean = "1.0"
walkdir = "2.5"

# Concurrency primitives
crossbeam = "0.8"
parking_lot = "0.12"
lazy_static = "1.4"
dashmap = "6.1"

# Random number generation
rand = "0.8"

# Testing utilities
tempfile = "3.10"
test-log = { version = "0.2", features = ["trace"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Environment and process management
which = "6.0"

# Binary serialization
bincode = "1.3"

# Compression (pure Rust, very fast)
lz4_flex = "0.11"

# Cryptographic hashing (10x faster than SHA2 for content-addressed storage)
blake3 = "1.5"

[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
strip = false
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

