[workspace]
resolver = "2"

members = [
    "llmspell-cli",
    "llmspell-core",
    "llmspell-agents",
    "llmspell-tools",
    "llmspell-workflows",
    "llmspell-templates",
    "llmspell-bridge",
    "llmspell-providers",
    "llmspell-storage",
    "llmspell-config",
    "llmspell-security",
    "llmspell-hooks",
    "llmspell-events",
    "llmspell-testing",
    "llmspell-utils",
    "llmspell-rag",
    "llmspell-memory",
    "llmspell-graph",
    "llmspell-context",
    "llmspell-tenancy",
    "llmspell-kernel",
    "examples/rust-developers/extension-pattern-example",
    "examples/rust-developers/builder-pattern-example",
    "examples/rust-developers/custom-tool-example",
    "examples/rust-developers/custom-agent-example",
    "examples/rust-developers/async-patterns-example",
    "examples/rust-developers/integration-test-example",
]

[workspace.package]
version = "0.13.1"
edition = "2021"
authors = ["Lex Lapax<lexlapax@gmail.com>"]
repository = "https://github.com/lexlapax/rs-llmspell"
license = "Apache-2.0"
keywords = ["llm", "ai", "agents", "scripting", "automation"]
categories = ["text-processing", "api-bindings", "automation"]

# Test categorization managed through features in llmspell-testing crate

[workspace.lints.rust]
unsafe_code = "warn"
unused_must_use = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.40", features = ["full"] }
# Phase 13c.1.3: tokio-stream removed from 4 crates, kept only in llmspell-events (event streaming)
tokio-stream = "0.1"
# Phase 13c.1.3: tokio-util removed from llmspell-kernel, kept only in llmspell-agents (CancellationToken)
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Phase 13c.1.4: serde_yaml removed (unused in any source files)
toml = "0.8"

# UUID and time handling
uuid = { version = "1.17", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "fmt",
    "time",
] }
tracing-futures = "0.2"

# Configuration management
config = "0.15"

# Testing framework
mockall = "0.13"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
serial_test = "3.1"
tracing-test = "0.2"

# Storage backends
sled = "0.34"
# Phase 13c.1.7: rocksdb not declared (transitive via surrealdb, no direct llmspell backend exists)

# PostgreSQL storage (Phase 13b.2 - optional)
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
pgvector = { version = "0.4", features = ["postgres"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }

# Scripting engines
mlua = { version = "0.9", features = [
    "lua54",
    "async",
    "serialize",
    "send",
    "parking_lot",
] }
boa_engine = "0.20"
# Phase 13c.1.7: quickjs_runtime removed (unused - no crate depends on it)

# LLM providers and AI
rig-core = "0.21"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.3"
tokenizers = "0.20"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "stream"] }

# JSON schema validation
jsonschema = "0.18"

# Cross-platform filesystem operations
# Phase 13c.1.5: Both kept for production-critical file utilities (llmspell-utils)
# path-clean: Path normalization with proper ../. resolution and edge case handling (3 uses in file_utils.rs)
# walkdir: Sophisticated directory traversal with max_depth, filtering, symlink handling (search.rs)
path-clean = "1.0"
walkdir = "2.5"

# Concurrency primitives
# Phase 13c.1.2: crossbeam kept only for llmspell-kernel (lock-free concurrent structures)
# Removed from llmspell-utils and llmspell-events (unused)
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6.1"

# Random number generation
rand = "0.8"

# Testing utilities
tempfile = "3.10"
test-log = { version = "0.2", features = ["trace"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Environment and process management
which = "6.0"

# Binary serialization
# Phase 13c.1.4: bincode kept for performance-critical session artifact storage (6 files in llmspell-kernel)
# Used for: metadata, artifacts, version history, stats - binary format more efficient than JSON for internal storage
bincode = "1.3"

# Compression & Hashing
# Phase 13c.1.6: lz4_flex kept for production-critical compression (4 files: kernel backup/fast-path, hooks persistence, daemon logging)
# Pure Rust, 10x faster than zlib, critical for state/hook compression performance
lz4_flex = "0.11"
# Phase 13c.1.6: blake3 removed (only used in llmspell-storage dev-dependencies)
# Tests can use sha2 (already in dependencies) for content hashing

[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
strip = false
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

# Note: Cargo patch for num-bigint-dig not possible (can't patch crates.io -> crates.io)
# Solution: Removed MySQL support (Task 13c.1.1) which eliminates rsa/num-bigint-dig dependency
