[workspace]
resolver = "2"

members = [
    "llmspell-cli",
    "llmspell-core",
    "llmspell-agents",
    "llmspell-tools",
    "llmspell-workflows",
    "llmspell-templates",
    "llmspell-bridge",
    "llmspell-providers",
    "llmspell-storage",
    "llmspell-config",
    "llmspell-security",
    "llmspell-hooks",
    "llmspell-events",
    "llmspell-testing",
    "llmspell-utils",
    "llmspell-rag",
    "llmspell-memory",
    "llmspell-graph",
    "llmspell-context",
    "llmspell-tenancy",
    "llmspell-kernel",
    "vectorlite-rs",
    "examples/rust-developers/custom-tool-example",
    "examples/rust-developers/custom-agent-example",
    "examples/rust-developers/integration-test-example", "llmspell-web",
]

[workspace.package]
version = "0.14.0"
edition = "2021"
authors = ["Lex Lapax<lexlapax@gmail.com>"]
repository = "https://github.com/lexlapax/rs-llmspell"
license = "Apache-2.0"
keywords = ["llm", "ai", "agents", "scripting", "automation"]
categories = ["text-processing", "api-bindings", "automation"]

# Test categorization managed through features in llmspell-testing crate

[workspace.lints.rust]
unsafe_code = "warn"
unused_must_use = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# ================================================================================
# Phase 13c.1 Dependency Decision Matrix
# ================================================================================
# Comprehensive audit completed: Removed 10 dependencies, documented 6 kept dependencies
#
# REMOVED (13 total):
# - lazy_static (13c.1.1): → std::sync::LazyLock (Rust 1.80+, zero-cost alternative)
# - once_cell (13c.1.1): → std::sync::OnceLock (Rust 1.80+ standard library)
# - tokio-stream (13c.1.3): Removed from 4 crates, kept only in llmspell-events
# - tokio-util (13c.1.3): Removed from llmspell-kernel, kept only in llmspell-agents
# - serde_yaml (13c.1.4): Removed (unused in any source files)
# - bincode 2.x duplicate (13c.1.4): Consolidated to bincode 1.3 across workspace
# - path-clean, walkdir (13c.1.5): Both kept (production-critical file utilities)
# - blake3 (13c.1.6): → sha2 (FIPS-compliant, used for content hashing)
# - quickjs_runtime (13c.1.7): Removed (zero code references, unused scripting engine)
# - hnsw_rs (13c.2.8.9): → vectorlite-rs (pure Rust HNSW via SQLite extension)
# - surrealdb (13c.2.8.10): Removed (SurrealDB graph backend deprecated)
# - sled (13c.2.8.11): Removed (Sled state backend deprecated)
#
# KEPT with justification (6 dependencies):
# - tokio-stream (llmspell-events): BroadcastStream wrapper for event streaming
# - tokio-util (llmspell-agents): CancellationToken for agent cancellation
# - crossbeam (llmspell-kernel): Lock-free concurrent structures (SegQueue, skiplist)
# - ureq (llmspell-providers): Sync HTTP for Candle model loading (avoids blocking)
# - rmp-serde (kernel+storage): MessagePack for vectorlite persistence + state backup
#
# Performance Impact:
# - Removed dependencies: 13 total (compile time improvements)
# - Zero behavioral changes: Only removed unused code
# - Test results: 2,982 tests passing, zero warnings
# - Clippy: Clean across all features
#
# ================================================================================

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.40", features = ["full"] }
# Phase 13c.1.3: tokio-stream removed from 4 crates, kept only in llmspell-events (event streaming)
tokio-stream = "0.1"
# Phase 13c.1.3: tokio-util removed from llmspell-kernel, kept only in llmspell-agents (CancellationToken)
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Phase 13c.1.4: serde_yaml removed (unused in any source files)
toml = "0.8"

# UUID and time handling
uuid = { version = "1.17", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "fmt",
    "time",
] }
tracing-futures = "0.2"

# Configuration management
config = "0.15"

# Testing framework
mockall = "0.13"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
serial_test = "3.1"
tracing-test = "0.2"

# Storage backends
# Phase 13c.2.8: sled removed (legacy backend deprecated)

# PostgreSQL storage (Phase 13b.2 - optional)
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-chrono-0_4",
    "with-serde_json-1",
] }
deadpool-postgres = "0.14"
pgvector = { version = "0.4", features = ["postgres"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }

# SQLite storage (Phase 13c.2 - libsql without encryption to avoid SHA1 conflict with zeromq-src)
# Note: encryption feature disabled temporarily until SHA1 symbol conflict resolved
libsql = { version = "0.9", features = ["core", "replication"] }
r2d2 = "0.8"
# Phase 13c.2.2a: Vector search - vectorlite-rs only (sqlite-vec removed due to libsqlite3-sys conflict)
# NOTE: Runtime fallback to vec0.so extension file still supported (loaded via load_extension)
zerocopy = { version = "0.8", features = [
    "derive",
] } # Zero-copy Vec<f32> marshaling via AsBytes trait

# Scripting engines
mlua = { version = "0.9", features = [
    "lua54",
    "async",
    "serialize",
    "send",
    "parking_lot",
] }
boa_engine = "0.20"
# Phase 13c.1.7: quickjs_runtime removed (unused - no crate depends on it)

# LLM providers and AI
rig-core = "0.25"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.3"
tokenizers = "0.20"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "stream"] }

# JSON schema validation
jsonschema = "0.18"

# Cross-platform filesystem operations
# Phase 13c.1.5: Both kept for production-critical file utilities (llmspell-utils)
# path-clean: Path normalization with proper ../. resolution and edge case handling (3 uses in file_utils.rs)
# walkdir: Sophisticated directory traversal with max_depth, filtering, symlink handling (search.rs)
path-clean = "1.0"
walkdir = "2.5"

# Concurrency primitives
# Phase 13c.1.2: crossbeam kept only for llmspell-kernel (lock-free concurrent structures)
# Removed from llmspell-utils and llmspell-events (unused)
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6.1"

# Random number generation
rand = "0.8"

# Testing utilities
tempfile = "3.10"
test-log = { version = "0.2", features = ["trace"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Environment and process management
which = "6.0"

# Binary serialization
# Phase 13c.1.4: bincode kept for performance-critical session artifact storage (6 files in llmspell-kernel)
# Used for: metadata, artifacts, version history, stats - binary format more efficient than JSON for internal storage
bincode = "1.3"

# Compression & Hashing
# Phase 13c.1.6: lz4_flex kept for production-critical compression (4 files: kernel backup/fast-path, hooks persistence, daemon logging)
# Pure Rust, 10x faster than zlib, critical for state/hook compression performance
lz4_flex = "0.11"
# Phase 13c.1.6: blake3 removed (only used in llmspell-storage dev-dependencies)
# Tests can use sha2 (already in dependencies) for content hashing

[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
# Memory optimization: Split debug info into separate files to reduce linker memory by 30-50%
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
strip = false
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256
# Memory optimization: Split debug info to reduce linker memory pressure during testing
# Critical for workspace tests with --all-features (4-8GB linker memory without this)
split-debuginfo = "unpacked"

# Note: Cargo patch for num-bigint-dig not possible (can't patch crates.io -> crates.io)
# Solution: Removed MySQL support (Task 13c.1.1) which eliminates rsa/num-bigint-dig dependency
