[package]
name = "llmspell-agents"
description = "Agent implementations for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llmspell-core = { path = "../llmspell-core" }
llmspell-providers = { path = "../llmspell-providers" }
llmspell-storage = { path = "../llmspell-storage" }
llmspell-tools = { path = "../llmspell-tools" }
llmspell-hooks = { path = "../llmspell-hooks" }
llmspell-state-persistence = { path = "../llmspell-state-persistence" }
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
once_cell.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
parking_lot.workspace = true
regex = "1.11"
rand = "0.8"

[dev-dependencies]
tracing-subscriber.workspace = true
tempfile = "3.8"
llmspell-sessions = { path = "../llmspell-sessions" }
llmspell-workflows = { path = "../llmspell-workflows" }

# Integration test configuration for provider state tests
[[test]]
name = "provider_state_integration"
path = "tests/provider_state_integration/mod.rs"
required-features = []