[package]
name = "llmspell-agents"
description = "Agent implementations for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
llmspell-core = { path = "../llmspell-core" }
llmspell-kernel = { path = "../llmspell-kernel" }
llmspell-providers = { path = "../llmspell-providers" }
llmspell-storage = { path = "../llmspell-storage" }
llmspell-tools = { path = "../llmspell-tools" }
llmspell-hooks = { path = "../llmspell-hooks" }
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
once_cell.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
parking_lot.workspace = true
regex = "1.11"
rand = "0.8"

[features]
default = ["hooks"]
hooks = []

[dev-dependencies]
tracing-subscriber.workspace = true
tempfile = "3.8"
llmspell-kernel = { path = "../llmspell-kernel" }
llmspell-workflows = { path = "../llmspell-workflows" }
llmspell-testing = { path = "../llmspell-testing" }

# Integration test configuration for provider state tests
[[test]]
name = "provider_state_integration"
path = "tests/provider_state_integration/mod.rs"
required-features = []