[package]
name = "llmspell-bridge"
description = "Script engine bridge for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
llmspell-core = { path = "../llmspell-core" }
llmspell-config = { path = "../llmspell-config" }
llmspell-providers = { path = "../llmspell-providers" }
llmspell-utils = { path = "../llmspell-utils" }
llmspell-tools = { path = "../llmspell-tools" }
llmspell-security = { path = "../llmspell-security" }
llmspell-agents = { path = "../llmspell-agents" }
llmspell-workflows = { path = "../llmspell-workflows" }
llmspell-events = { path = "../llmspell-events" }
llmspell-hooks = { path = "../llmspell-hooks" }
llmspell-state-persistence = { path = "../llmspell-state-persistence" }
llmspell-storage = { path = "../llmspell-storage" }
llmspell-sessions = { path = "../llmspell-sessions" }
llmspell-rag = { path = "../llmspell-rag" }
llmspell-tenancy = { path = "../llmspell-tenancy" }
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
uuid = { workspace = true }
base64 = "0.22"
lru = "0.12"

# Script engine dependencies (feature-gated)
mlua = { workspace = true, optional = true }
boa_engine = { workspace = true, optional = true }

[dev-dependencies]
llmspell-testing = { path = "../llmspell-testing" }
llmspell-tenancy = { path = "../llmspell-tenancy" }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.0"
rand = "0.8"

[features]
default = ["lua"]
lua = ["dep:mlua"]
javascript = ["dep:boa_engine"]

# Test categories (to fix cfg warnings)
integration-tests = []
bridge-tests = []
workflow-tests = []

[[bench]]
name = "workflow_bridge_bench"
harness = false

[[bench]]
name = "session_bench"
harness = false

[[bench]]
name = "rag_bench"
harness = false

[[test]]
name = "session_workflow"
path = "tests/integration/session_workflow.rs"