[package]
name = "llmspell-bridge"
description = "Script engine bridge for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
llmspell-core = { path = "../llmspell-core" }
llmspell-config = { path = "../llmspell-config" }
llmspell-providers = { path = "../llmspell-providers" }
llmspell-utils = { path = "../llmspell-utils" }
llmspell-tools = { path = "../llmspell-tools", features = ["common"] }
llmspell-security = { path = "../llmspell-security" }
llmspell-agents = { path = "../llmspell-agents" }
llmspell-workflows = { path = "../llmspell-workflows" }
llmspell-events = { path = "../llmspell-events" }
llmspell-hooks = { path = "../llmspell-hooks" }
llmspell-storage = { path = "../llmspell-storage" }
llmspell-kernel = { path = "../llmspell-kernel" }
llmspell-rag = { path = "../llmspell-rag" }
llmspell-tenancy = { path = "../llmspell-tenancy" }
llmspell-templates = { path = "../llmspell-templates" }
llmspell-memory = { path = "../llmspell-memory" }
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
uuid = { workspace = true }
base64 = "0.22"
lru = "0.12"

# Script engine dependencies (feature-gated)
mlua = { workspace = true, optional = true }
boa_engine = { workspace = true, optional = true }

[dev-dependencies]
llmspell-testing = { path = "../llmspell-testing" }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.0"
rand = "0.8"

[features]
default = []  # Language-neutral by default - users opt-in to Lua/JavaScript
common = ["lua", "llmspell-tools/common"]  # Common tools preset
full = ["lua", "javascript", "llmspell-tools/full"]  # All features enabled

# Script engine features
lua = ["dep:mlua"]
javascript = ["dep:boa_engine"]

# Forward tool features to llmspell-tools
csv-parquet = ["llmspell-tools/csv-parquet"]
templates = ["llmspell-tools/templates"]
pdf = ["llmspell-tools/pdf"]
excel = ["llmspell-tools/excel"]
json-query = ["llmspell-tools/json-query"]
archives = ["llmspell-tools/archives"]
email = ["llmspell-tools/email"]
email-aws = ["llmspell-tools/email-aws"]
database = ["llmspell-tools/database"]

# Test categories (to fix cfg warnings)
integration-tests = []
bridge-tests = []
workflow-tests = []

[[bench]]
name = "workflow_bridge_bench"
harness = false

[[bench]]
name = "session_bench"
harness = false

[[bench]]
name = "rag_bench"
harness = false

[[test]]
name = "session_workflow"
path = "tests/integration/session_workflow.rs"

# Lua-dependent tests (require common feature: lua + common tools)
[[test]]
name = "agent_bridge_test"
required-features = ["common"]

[[test]]
name = "async_tool_execution_test"
required-features = ["common"]

[[test]]
name = "bridge_abstraction_test"
required-features = ["common"]

[[test]]
name = "bridge_provider_test"
required-features = ["common"]

[[test]]
name = "external_api_tests"
required-features = ["common"]

[[test]]
name = "globals_test"
required-features = ["common"]

[[test]]
name = "integration_test"
required-features = ["common"]

[[test]]
name = "lua_completion_tests"
required-features = ["common"]

[[test]]
name = "lua_coroutine_test"
required-features = ["common"]

[[test]]
name = "lua_engine_test"
required-features = ["common"]

[[test]]
name = "lua_workflow_api_tests"
required-features = ["common"]

[[test]]
name = "performance_test"
required-features = ["common"]

[[test]]
name = "provider_enhancement_test"
required-features = ["common"]

[[test]]
name = "provider_integration_test"
required-features = ["common"]

[[test]]
name = "runtime_test"
required-features = ["common"]

[[test]]
name = "simple_tool_integration_test"
required-features = ["common"]

[[test]]
name = "streaming_test"
required-features = ["common"]

[[test]]
name = "sync_behavior_test"
required-features = ["common"]

[[test]]
name = "tools_integration_test"
required-features = ["common"]

[[test]]
name = "workflow_bridge_integration_tests"
required-features = ["common"]