[package]
name = "llmspell-cli"
description = "Command-line interface for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "llmspell"
path = "src/main.rs"

[dependencies]
llmspell-core = { path = "../llmspell-core" }
llmspell-config = { path = "../llmspell-config" }
llmspell-bridge = { path = "../llmspell-bridge" }
llmspell-kernel = { path = "../llmspell-kernel" }
llmspell-providers = { path = "../llmspell-providers" }
llmspell-utils = { path = "../llmspell-utils" }
llmspell-storage = { path = "../llmspell-storage" }
tokio.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
dirs = "5.0"
tokio-stream = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }
rustyline = "14.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
serial_test = { workspace = true }