[package]
name = "llmspell-cli"
description = "Command-line interface for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "llmspell"
path = "src/main.rs"

[dependencies]
llmspell-core = { path = "../llmspell-core" }
llmspell-config = { path = "../llmspell-config" }
llmspell-bridge = { path = "../llmspell-bridge", default-features = false, features = ["lua"] }
llmspell-kernel = { path = "../llmspell-kernel" }
llmspell-providers = { path = "../llmspell-providers" }
llmspell-utils = { path = "../llmspell-utils" }
llmspell-storage = { path = "../llmspell-storage" }
llmspell-templates = { path = "../llmspell-templates" }
llmspell-agents = { path = "../llmspell-agents" }
llmspell-tools = { path = "../llmspell-tools" }
llmspell-workflows = { path = "../llmspell-workflows" }
tokio.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
dirs = "5.0"
tokio-stream = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }
rustyline = "14.0"

[features]
default = ["lua"]  # Backward compatibility - defaults to Lua (users can opt-out with --no-default-features)
common = ["llmspell-bridge/common", "lua"]  # Convenient preset for typical usage
full = ["llmspell-bridge/full", "lua", "javascript"]  # All features enabled

# Language features (forward from bridge)
lua = ["llmspell-bridge/lua"]
javascript = ["llmspell-bridge/javascript"]
python = []  # Python support placeholder for future

# Future protocol support
mcp = []  # Model Context Protocol support (Phase 12)
a2a = []  # Agent-to-Agent protocol support (Phase 18)

# Forward individual tool features
csv-parquet = ["llmspell-bridge/csv-parquet"]
templates = ["llmspell-bridge/templates"]
pdf = ["llmspell-bridge/pdf"]
excel = ["llmspell-bridge/excel"]
json-query = ["llmspell-bridge/json-query"]
archives = ["llmspell-bridge/archives"]
email = ["llmspell-bridge/email"]
email-aws = ["llmspell-bridge/email-aws"]
database = ["llmspell-bridge/database"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
serial_test = { workspace = true }
async-trait = { workspace = true }