[package]
name = "llmspell-config"
description = "Configuration management for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llmspell-core = { path = "../llmspell-core" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
