[package]
name = "llmspell-core"
description = "Core traits, types, and infrastructure for rs-llmspell"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jsonschema.workspace = true
futures.workspace = true
mockall = { workspace = true, optional = true }

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true
criterion.workspace = true
tokio-test = "0.4"
llmspell-testing = { path = "../llmspell-testing" }

[features]
default = []
testing = ["mockall"]

[[bench]]
name = "core_benchmarks"
harness = false